Bug Fix: 'header issue on smaller screens

--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -122,7 +122,7 @@ header{
 			text-align: center;
 			font-weight: 700;
 			color: $dark-blue;
-			width: 15%;
+			width: 16%;
 
 			a{
 				background: $sidebar-bg;
@@ -166,7 +166,7 @@ header{
 		}
 
 		.navbar-right{
-			width: 56%;
+			margin-left: auto;
 
 			ul{
 				text-align: right;
@@ -200,6 +200,7 @@ header{
 	height: 100%;
 	position: fixed;
 	padding: 0;
+	width: 16%;
 
 	.logo{
 		margin-top: 25px;
